# python-project-lvl1

./: .gitignore  .pre-commit-config.yaml  FILE.md  FL.txt  Makefile  NEW.md  PEOPLE.md  README.md  functions.py  info.md  main.py  pyproject.toml  readme.txt  setup.cfg
.github/workflows/: GitHub-Actions-check.yml  lint.yml
First_poetry_project/: pyproject.toml
brain_games/: cli.py  game_core.py
brain_games/games/: brain_calc_game.py  brain_even_game.py  brain_even_rules.py  brain_gcd_game.py  brain_prime_game.py  brain_progression_game.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
poetry_project/scripts/: say_hello.py
tests/: test_first_poetry_project.py
