[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["alexeyf <Ffl.B-Unit@mail.ru>"]
packages = [
	{ include = "brain_games" },
]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
