[tool.poetry]
name = "First_poetry_project"
version = "0.1.0"
description = ""
authors = ["alexeyf <Ffl.B-Unit@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
colorama = "^0.4.4"

[tool.poetry.scripts]
say-hello="first_poetry_project.scripts.say_hello:main"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "7.30.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
